force-app/main/default/objects/Short_term_goal__c/Short_term_goal__c.object-meta.xml
<CustomObject>
    <label>Short term goal</label>
    <nameField>
        <label>Short term goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Short term goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>