force-app/main/default/objects/Short_term_goal__c/fields/Plan_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Plan_of_Action__c</fullName>
    <label>Plan of Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>