force-app/main/default/objects/Short_term_goal__c/fields/Projected_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Projected_completion_date__c</fullName>
    <label>Projected completion date</label>
    <type>Date</type>
</CustomField>