force-app/main/default/objects/Short_term_goal__c/fields/Responsible_Parties__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Parties__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Parties</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Short term goals</relationshipLabel>
    <relationshipName>Short_term_goals</relationshipName>
    <type>Lookup</type>
</CustomField>