force-app/main/default/objects/Short_term_goal__c/fields/Youth_Transition_Plan__c.field-meta.xml
<CustomField>
    <fullName>Youth_Transition_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Youth Transition Plan</label>
    <referenceTo>Youth_Transition_Plan__c</referenceTo>
    <relationshipLabel>Short term goals</relationshipLabel>
    <relationshipName>Short_term_goals</relationshipName>
    <type>Lookup</type>
</CustomField>